--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,8 +1,7 @@
 <div class="hero">
-    <img class="hero__bg" src="{{root}}assets/img/content/borito.jpg" alt="Apa mikor jön haza?">
+    <img class="hero__bg" src="{{root}}assets/img/content/apagyereketemel.jpg" alt="Otthon várunk!">
     <div class="hero__content">
-        <h2 class="hero__title text-center">Apa mikor jön</h2>
-        <h2 class="hero__title text-right"><span>haza?</span></h2>
+        <h2 class="hero__title">Otthon<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;várunk!</h2>
     </div>
 </div>
 
@@ -93,31 +92,31 @@
                     volt évek múltán újra szabaddá válni, 
                     szabadon élni.
                     </p>
-                    <p><a href="#" target="_blank" class="button tiny faux">Meghalgatom a vágatlan verziót<svg class="icon"><use xlink:href="#icon-openlink"></use></svg></a></p>
+                    <p><a href="https://soundcloud.com/helsinkibizottsag/elet-a-racsok-mogott-hosszu" target="_blank" class="button tiny faux">Meghalgatom a vágatlan verziót<svg class="icon"><use xlink:href="#icon-openlink"></use></svg></a></p>
             </div>
           </div>
             <hr class="fulldivider">
             <div astyle="background-color: #374045; padding:0.75rem 0.5rem .333rem">
-                <iframe width="100%" height="20" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/813240166&color=%23ff5722&inverse=true&auto_play=false&show_user=false"></iframe>
+                <iframe width="100%" height="20" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1204678576&color=%23ff5722&inverse=true&auto_play=false&show_user=false"></iframe>
             </div>
             <!-- <div style="background-color: #F1E9D9; padding:0.75rem 0.5rem .333rem">
-                <iframe width="100%" height="20" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/813240166&color=%23ff5722&inverse=false&auto_play=false&show_user=false"></iframe>
+                <iframe width="100%" height="20" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1204678576&color=%23ff5722&inverse=false&auto_play=false&show_user=false"></iframe>
             </div> -->
     </div>
 </div>
 <div class="pagewrap">
     <div class="accentcopy narrowwrap">
-        <h2 class="sectitle">Levélrészletek</h2>
-        <p>Lorem ipsum dolor, sit amet dolor sit amet consectetur adipisicing elit. In est tempore sequi. Lorem ipsum dolor sit amet.</p>
+        <h2 class="sectitle">Levélrészletek és beszámolók</h2>
+        <p>Az érintettek és családtagok szemszögéből, orem ipsum dolor, sit amet dolor sit amet consectetur adipisicing elit. In est tempore sequi. Lorem ipsum dolor sit amet.</p>
     </div>
     <section class="cardswiper">
         <div>
             <article class="card card--short">
                 <h3 class="card__title">
-                        Mária levele férjének a börtönbe
+                    Olívia beszámolója az első napokról  
                 </h3>
                 <div class="card__excerpt">
-                    <p>Tempore corporis exercitationem dolore magnam porro nobis ab magni pariatur error at, dolorum odit? Architecto.</p>
+                    <p>Amikor tisztában vagy vele, hogy nemsokára át kell sétálnod a poklon, az idő száguldani kezd. Biztos voltam benne, hogy nemsokára megérkezik A LEVÉL, ami elszakítja tőlünk a gyermekeim apját, a másik felemet.</p>
                 </div>
                 <div class="card__actions">
                     <button data-open="letter-one-modal" class="button accent">Elolvasom!</button>
@@ -168,12 +167,14 @@
 <div class="lettermodal" id="letter-one-modal" data-reveal data-animation-in="fade-in fast" data-animation-out="fade-out fast">
     <div class="lettermodal__inner">
         <div class="narrowwrap accentcopy">
-            <h3>Amet consectetur adipisicing elit</h3>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corporis ab maxime quisquam reiciendis repellendus illo, provident quia quae in sapiente officia commodi nisi deserunt temporibus sequi placeat. Accusamus quidem, aperiam ab ipsam aliquam exercitationem est. Veniam veritatis inventore id modi eum nostrum aliquam labore consequatur.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima amet assumenda ad delectus nesciunt voluptatum, rerum veritatis laboriosam corrupti repudiandae provident natus necessitatibus.</p>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corporis ab maxime quisquam reiciendis repellendus illo, provident quia quae in sapiente officia commodi nisi deserunt temporibus sequi placeat. Accusamus quidem, aperiam ab ipsam aliquam exercitationem est. Veniam veritatis inventore id modi eum nostrum aliquam labore consequatur.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima amet assumenda ad delectus nesciunt voluptatum, rerum veritatis laboriosam corrupti repudiandae provident natus necessitatibus.</p>
-
+            <h3 class="narrowwrap__floatingtitle">Olívia beszámolója az első napokról</h3>
+            <p>Amikor tisztában vagy vele, hogy nemsokára át kell sétálnod a poklon, az idő száguldani kezd. Biztos voltam benne, hogy nemsokára megérkezik A LEVÉL, ami elszakítja tőlünk a gyermekeim apját, a másik felemet. Féltem a saját postaládánktól, minden alkalommal, amikor kinyitottam. Vajon benne lesz ma? Vagy marad még egy kis időnk együtt? Nem váratott magára túl sokat... A gyerekeket elvittem az oviba, és mivel volt egy fontos időpontom, előtte hazaugrottam. Értesítést dobtak be, rohantam a postára. Feltéptem a levelet, ahogy kiléptem az ajtón. Az első, amin megakadt a szemem, hogy van még 4 teljes hét, a másik pedig az Intézmény neve. Sokkot kaptam, az egyetlen hely, amitől rettegtem. Remegve felszálltam a (rossz) buszra és elindultam valahova...</p>
+            <p>A következő hetekben megpróbáltunk némi információhoz jutni, de falakba ütköztünk. Első körben természetesen felhívtam az adott Intézményt. Úgy kezeltek, mintha egy atombombát dobtam volna le. Szörnyen megalázó volt. Igyekeztem a megütött stílus ellenére kulturált maradni, tájékozódni, de egy morzsányi információnál többet nem kaptam.
+            Gyakorlatilag vakon vittem a férjemet egy olyan helyre, ahol várhatóan 38 hónapot fog tölteni.</p>
+            <p>Aznap reggel felöltöztette a kicsiket, elmondta nekik, hogy mennyire szereti őket, én pedig végignéztem, ahogy megpuszilják, megölelik egymást, mit sem sejtve arról, hogy mennyi időt kell majd nélküle tölteniük. Sosem fogom elfelejteni, rettenetes volt. Akkor voltak 2 illetve 3 évesek.</p>
+            <p>Elvittük őt autóval, bőven idő előtt értünk oda. És besétált... Azon gondolkoztam hazafelé, hogy hogyan voltam képes őt itthagyni, ezen a helyen? Persze ennek semmi értelme, mégis ezt éreztem.</p>
+            <p>Pár nap telt el, semmi hírem nem volt róla. Hétvégén otthon voltunk, a lányom a kanapén feküdt. Hallottam, hogy valamit motyog, de nem értettem, így odaültem mellé. "Apa, csoki. Apa, csoki" suttogta halkan. Legszívesebben zokogtam volna, de összeszedtem magam, és adtam neki. Apa volt, akitől mindig kaphatott egy kis csokit, akár ebéd előtt is. A kisfiunk még nem beszélt akkor, de folyamatosan kereste. Végigjárta a szobákat, mindenhova benézett reggel. De nem találta...</p>
+            <p><em>Olívia</em></p>
         </div>
     </div>
     <button class="lettermodal__close" data-close aria-label="Felugró bezárása" type="button">
@@ -185,11 +186,11 @@
         <h2>FECSKE - Fogvatartottakat és Családjukat Képviselő Csoport.</h2>
         <p>Szabadult fogvatartottakból, családtagjaikból, civilekből, a büntetés-végrehajtással foglalkozó szakemberekből álló hálózat. Ez a hálózat abban hisz, hogy mindenkinek joga van a szabadságvesztés büntetését emberséges körülmények között tölteni. Az emberséges börtönkörülmények között töltött szabadságvesztés, a szociális szolgáltatások segítik a szabadulás utáni talpra állást, a társadalomba történő sikeres visszailleszkedést. Az emberséges fogvatartás kiemelt figyelmet fordít a családdal való minőségi kapcsolattartásra.</p>
         <p>A FECSKE azért jött létre, hogy a magyar börtön égető, és rendszerszintű problémáin együtt gondolkozhassanak a büntetés-végrehajtás által érintett csoportok tagjai. Hosszútávon egy önszerveződő mozgalom alapjait kívánjuk megteremteni és a fogvatartottak érdekképviseletének új formáit kialakítani. Célunk, hogy változzon a közvéleményben a fogvatartottakról kialakított kép. Legyen olyan platform, amin a fogvatartottak és családjuk nézőpontja is megjelenik.</p>
-        <a href="#" class="button large">A FECSKE weboldala</a>
+        <a href="https://fogvatartas.hu/" target="_blank" class="button large">A FECSKE weboldala</a>
     </div>
     <div class="mpt__media">
         <figure class="mpt__fig">
-            <img src="{{root}}assets/img/content/borito.jpg" alt="">
+            <img src="{{root}}assets/img/content/madarak.jpg" alt="">
         </figure>
     </div>
 </section>
