--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,5 +1,5 @@
 <div class="hero">
-    <img class="hero__bg" src="{{root}}assets/img/content/apagyereketemel.jpg" alt="Otthon várunk!">
+    <img class="hero__bg" src="{{root}}assets/img/content/hazasparkutyaval.jpg" alt="Otthon várunk!">
     <div class="hero__content">
         <h2 class="hero__title">Otthon<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;várunk!</h2>
     </div>
@@ -10,6 +10,7 @@
         <h1 class="sectitle">Távol a család projekt</h1>
         <p>Kampányunk keretében személyes történeteknek adunk teret. Olyan emberek mesélnek, akiknek valamilyen közeli családtagja  - gyermeke, unokája, anyja, apja, párja - volt börtönben, vagy ők maguk járták meg a börtönt. A történetek az életükről szólnak, amiben egy ideig jelen volt a börtön valósága, ami elszakította őket szeretteiktől.</p>
         <p>A  saját, személyes megéléseiket osztják meg velünk. Azt, hogy mi volt a legnehezebb az egymástól távol töltött időben, hogyan tudtak kommunikálni és hogyan érintette ez az időszak a kapcsolataikat. Mennyiben lehetetlenítette el a minőségi kapcsolattartást, hogy a világjárvány miatt több, mint egy éven át nem láthatták személyesen a szeretteiket.</p>
+        <p>Árvíztűrő tükörfúrógép</p>
     </div>
 </div>
 <div id="stories" data-magellan-target="stories">
@@ -21,16 +22,16 @@
     </div>
     <section class="mpt wide reverse">
         <div class="mpt__content">
-            <h2>Ő itt andrea</h2>
-            <p>Gyermeke, unokája, anyja, apja, párja - volt börtönben, vagy ők maguk járták meg a börtönt. A történetek az életükről szólnak, amiben egy ideig jelen volt a börtön valósága, ami elszakította őket szeretteiktől.</p>
-            <p>A  saját, személyes megéléseiket osztják meg velünk. Azt, hogy mi volt a legnehezebb az egymástól távol töltött időben, hogyan tudtak kommunikálni és hogyan érintette ez az időszak a kapcsolataikat. Mennyiben lehetetlenítette el a minőségi kapcsolattartást, hogy a világjárvány miatt több, mint egy éven át nem láthatták személyesen a szeretteiket.</p>
+            <h2>Etelka története</h2>
+            <p>Etelka egyedül élő nyugdíjas, özvegy. Amikor kiderült számára, hogy egy közeli családtagjára, L-re szabadságvesztés vár, összetört. Nem tudta, meddig tart majd ez a „pokol”, egy dologban azonban a kezdetektől fogva biztos volt: mindenben és bármi áron támogatni fogja szerettét.</p>
+            <p>Több mint négy éven keresztül járt látogatni, nem volt egyetlen alkalom sem, amit kihagyott volna. Azzal igyekezett tartani a lelket L-ben, hogy újra és újra elmondta neki, hazavárja a szabadulása után.</p>
             <p>
-                <button data-youtubemodal="paL7QSf9kc4" class="button">Megnézem a videót!<svg class="icon"><use xlink:href="#icon-play"></use></svg></button>&nbsp;
-                <a href="{{root}}/story.html" class="button accent">Teljes sztori itt<svg class="icon"><use xlink:href="#icon-openlink"></use></svg></a>
+                <button data-youtubemodal="AQ2MQzyoE98" class="button">Megnézem a videót!<svg class="icon"><use xlink:href="#icon-play"></use></svg></button>&nbsp;
+                <a href="{{root}}/etelka.html" class="button accent">Teljes sztori itt<svg class="icon"><use xlink:href="#icon-openlink"></use></svg></a>
             </p>
         </div>
         <div class="mpt__bg">
-            <!-- <button class="mpt__bg__play" data-youtubemodal="paL7QSf9kc4"><svg class="icon"><use xlink:href="#icon-play"></use></svg></button> -->
+            <!-- <button class="mpt__bg__play" data-youtubemodal="AQ2MQzyoE98"><svg class="icon"><use xlink:href="#icon-play"></use></svg></button> -->
             <img src="{{root}}/assets/img/content/0112_I.jpg" alt="">
         </div>
     </section>
@@ -77,12 +78,12 @@
         <div class="grid-x grid-margin-x grid-margin-y">
             <div class="cell large-6">
                 <blockquote>
-                    „Édesapámat kétszer láttam sírni életemben - egyszer öcsém temetésén, aki autóbalesetben elhunyt, másodszor pedig akkor, amikor mentünk az autópályán a börtönbe.”  
-                    <cite>János, 5 év után 2021-ben szabadult</cite>
+                    „Bent senkit nem érdekel, hogy ezt ki ússza meg szellemileg épségben, senkit nem érdekel, ki milyen mentális állapotban szabadul. Ami egy picit is erőt adott, az a családom.”  
+                    <cite>János, 3 év 8 hónap után szabadult</cite>
                 </blockquote>
                 <blockquote>
-                    „Bent senkit nem érdekel, hogy ezt ki ússza meg szellemileg épségben, senkit nem érdekel, ki milyen mentális állapotban szabadul. Ami egy picit is erőt adott, az a családom.”
-                    <cite>Ferenc, 2025-ben szabadul</cite>
+                    „Az ember úgy képzeli el, hogy a szabadulás felhőtlen boldogság, de vannak árnyoldalai is. Nekem vissza kellett lassulnom, elengednem dolgokat, a felét annak, amit akarok, gondolok, tervezek.”
+                    <cite>Péter, 3 év 6 hónap után szabadult</cite>
                 </blockquote>
             </div>
             <div class="cell large-6 aaccentcopy">
@@ -119,20 +120,20 @@
                     <p>Amikor tisztában vagy vele, hogy nemsokára át kell sétálnod a poklon, az idő száguldani kezd. Biztos voltam benne, hogy nemsokára megérkezik A LEVÉL, ami elszakítja tőlünk a gyermekeim apját, a másik felemet.</p>
                 </div>
                 <div class="card__actions">
-                    <button data-open="letter-one-modal" class="button accent">Elolvasom!</button>
+                    <button data-open="letter-olivia-modal" class="button accent">Elolvasom!</button>
                 </div>
             </article>
         </div>
         <div>
             <article class="card card--short secondary">
                 <h3 class="card__title">
-                    Jakab levele bentről a feleségének
+                    Leila és a családja története
                 </h3>
                 <div class="card__excerpt">
-                    <p>Dolor sit amet consectetur, adipisicing elit. Tempore corporis exercitationem dolore magnam porro nobis ab magni pariatur error at, dolorum odit? Architecto.</p>
+                    <p>Csak számoljuk a napokat, amikor végre együtt lehet a család. Az a család, ami soha nem is volt igazán egy. Mert valaki hiányzott belőle mindig is. Az édesapám!</p>
                 </div>
                 <div class="card__actions">
-                    <button data-open="letter-one-modal" class="button">Elolvasom!</button>
+                    <button data-open="letter-leila-modal" class="button">Elolvasom!</button>
                 </div>
             </article>
         </div>
@@ -145,42 +146,14 @@
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore corporis exercitationem dolore magnam porro nobis ab magni pariatur error at, dolorum odit? Architecto.</p>
                 </div>
                 <div class="card__actions">
-                    <button data-open="letter-one-modal" class="button">Elolvasom!</button>
-                </div>
-            </article>
-        </div>
-        <div>
-            <article class="card card--short secondary">
-                <h3 class="card__title">
-                    Zita levele a börtönből
-                </h3>
-                <div class="card__excerpt">
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore corporis exercitationem dolore magnam porro nobis ab magni pariatur error at, dolorum odit? Architecto.</p>
-                </div>
-                <div class="card__actions">
-                    <button data-open="letter-one-modal" class="button accent">Elolvasom!</button>
+                    <button data-open="letter-third-modal" class="button">Elolvasom!</button>
                 </div>
             </article>
         </div>
     </section>
 </div>
-<div class="lettermodal" id="letter-one-modal" data-reveal data-animation-in="fade-in fast" data-animation-out="fade-out fast">
-    <div class="lettermodal__inner">
-        <div class="narrowwrap accentcopy">
-            <h3 class="narrowwrap__floatingtitle">Olívia beszámolója az első napokról</h3>
-            <p>Amikor tisztában vagy vele, hogy nemsokára át kell sétálnod a poklon, az idő száguldani kezd. Biztos voltam benne, hogy nemsokára megérkezik A LEVÉL, ami elszakítja tőlünk a gyermekeim apját, a másik felemet. Féltem a saját postaládánktól, minden alkalommal, amikor kinyitottam. Vajon benne lesz ma? Vagy marad még egy kis időnk együtt? Nem váratott magára túl sokat... A gyerekeket elvittem az oviba, és mivel volt egy fontos időpontom, előtte hazaugrottam. Értesítést dobtak be, rohantam a postára. Feltéptem a levelet, ahogy kiléptem az ajtón. Az első, amin megakadt a szemem, hogy van még 4 teljes hét, a másik pedig az Intézmény neve. Sokkot kaptam, az egyetlen hely, amitől rettegtem. Remegve felszálltam a (rossz) buszra és elindultam valahova...</p>
-            <p>A következő hetekben megpróbáltunk némi információhoz jutni, de falakba ütköztünk. Első körben természetesen felhívtam az adott Intézményt. Úgy kezeltek, mintha egy atombombát dobtam volna le. Szörnyen megalázó volt. Igyekeztem a megütött stílus ellenére kulturált maradni, tájékozódni, de egy morzsányi információnál többet nem kaptam.
-            Gyakorlatilag vakon vittem a férjemet egy olyan helyre, ahol várhatóan 38 hónapot fog tölteni.</p>
-            <p>Aznap reggel felöltöztette a kicsiket, elmondta nekik, hogy mennyire szereti őket, én pedig végignéztem, ahogy megpuszilják, megölelik egymást, mit sem sejtve arról, hogy mennyi időt kell majd nélküle tölteniük. Sosem fogom elfelejteni, rettenetes volt. Akkor voltak 2 illetve 3 évesek.</p>
-            <p>Elvittük őt autóval, bőven idő előtt értünk oda. És besétált... Azon gondolkoztam hazafelé, hogy hogyan voltam képes őt itthagyni, ezen a helyen? Persze ennek semmi értelme, mégis ezt éreztem.</p>
-            <p>Pár nap telt el, semmi hírem nem volt róla. Hétvégén otthon voltunk, a lányom a kanapén feküdt. Hallottam, hogy valamit motyog, de nem értettem, így odaültem mellé. "Apa, csoki. Apa, csoki" suttogta halkan. Legszívesebben zokogtam volna, de összeszedtem magam, és adtam neki. Apa volt, akitől mindig kaphatott egy kis csokit, akár ebéd előtt is. A kisfiunk még nem beszélt akkor, de folyamatosan kereste. Végigjárta a szobákat, mindenhova benézett reggel. De nem találta...</p>
-            <p><em>Olívia</em></p>
-        </div>
-    </div>
-    <button class="lettermodal__close" data-close aria-label="Felugró bezárása" type="button">
-        <span aria-hidden="true"><svg class="icon"><use xlink:href="#icon-close"></use></svg></span>
-    </button>
-</div>
+{{>lettermodals}}
+
 <section id="aboutus" class="mpt awide" data-magellan-target="aboutus">
     <div class="mpt__content ">
         <h2>FECSKE - Fogvatartottakat és Családjukat Képviselő Csoport.</h2>
