--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -5,65 +5,78 @@
     </div>
 </div>
 
-<div id="project" data-magellan-target="project" class="pagewrap nobottom">
+<div id="project" data-magellan-target="project" class="pagewrap">
+    <div class="xnarrowwrap left">
+    <h1 class="sectitle">Távol a család projekt</h1>
+    <h4>Hozzátartozók személyes történetei</h4>
+    </div>
+    <br>
     <div class="narrowwrap accentcopy">
-        <h1 class="sectitle">Távol a család projekt</h1>
         <p>Kampányunk keretében személyes történeteknek adunk teret. Olyan emberek mesélnek, akiknek valamilyen közeli családtagja  - gyermeke, unokája, anyja, apja, párja - volt börtönben, vagy ők maguk járták meg a börtönt. A történetek az életükről szólnak, amiben egy ideig jelen volt a börtön valósága, ami elszakította őket szeretteiktől.</p>
         <p>A  saját, személyes megéléseiket osztják meg velünk. Azt, hogy mi volt a legnehezebb az egymástól távol töltött időben, hogyan tudtak kommunikálni és hogyan érintette ez az időszak a kapcsolataikat. Mennyiben lehetetlenítette el a minőségi kapcsolattartást, hogy a világjárvány miatt több, mint egy éven át nem láthatták személyesen a szeretteiket.</p>
-        <p>Árvíztűrő tükörfúrógép</p>
+        <p>Célunk, hogy a hozzátartozók és szabadult fogvatartottak személyes történeteinek erejével megmutassuk, hogy a börtönök valósága nincs is olyan távol tőlünk, mint hinnénk. A minőségi kapcsolattartás jelenti azt a fonalat, ami visszavezet a kinti életbe. A kinti kapcsolatok teszik lehetővé, hogy a börtönt megjárt emberek újra a társadalom tagjai lehessenek. </p>
     </div>
 </div>
-<div id="stories" data-magellan-target="stories">
-    <div class="pagewrap">
-        <div class="narrowwrap accentcopy">
-            <h1 class="sectitle">Személyes történetek</h1>
-            <p>Célunk, hogy a hozzátartozók és szabadult fogvatartottak személyes történeteinek erejével megmutassuk, hogy a börtönök valósága nincs is olyan távol tőlünk, mint hinnénk. A minőségi kapcsolattartás jelenti azt a fonalat, ami visszavezet a kinti életbe. A kinti kapcsolatok teszik lehetővé, hogy a börtönt megjárt emberek újra a társadalom tagjai lehessenek. </p>
-        </div>
-    </div>
+<hr class="piheno">
+<br><br><br>
+<div class="mptlist" id="stories" data-magellan-target="stories">
     <section class="mpt wide reverse">
-        <div class="mpt__content">
-            <h2>Etelka története</h2>
-            <p>Etelka egyedül élő nyugdíjas, özvegy. Amikor kiderült számára, hogy egy közeli családtagjára, L-re szabadságvesztés vár, összetört. Nem tudta, meddig tart majd ez a „pokol”, egy dologban azonban a kezdetektől fogva biztos volt: mindenben és bármi áron támogatni fogja szerettét.</p>
-            <p>Több mint négy éven keresztül járt látogatni, nem volt egyetlen alkalom sem, amit kihagyott volna. Azzal igyekezett tartani a lelket L-ben, hogy újra és újra elmondta neki, hazavárja a szabadulása után.</p>
+        <div class="mpt__content indented">
+            <h2 class="b1">Anna és férje története</h2>
+            <p>„Lorem ipsum dolor sit amet. Nagyon nehéz volt ez a jó pár év, de a lelkem mindig azt kívánta, hogy muszáj hozzá bemenni, kell, hogy legyen támasza.”</p>
             <p>
-                <button data-youtubemodal="AQ2MQzyoE98" class="button">Megnézem a videót!<svg class="icon"><use xlink:href="#icon-play"></use></svg></button>&nbsp;
+                <!-- <button data-youtubemodal="AQ2MQzyoE98" class="button">Megnézem a videót!<svg class="icon"><use xlink:href="#icon-play"></use></svg></button>&nbsp; -->
                 <a href="{{root}}/etelka.html" class="button accent">Teljes sztori itt<svg class="icon"><use xlink:href="#icon-openlink"></use></svg></a>
             </p>
         </div>
         <div class="mpt__bg">
-            <!-- <button class="mpt__bg__play" data-youtubemodal="AQ2MQzyoE98"><svg class="icon"><use xlink:href="#icon-play"></use></svg></button> -->
+            <button class="mpt__bg__play" data-youtubemodal="eaXAEowxOQg"><svg class="icon"><use xlink:href="#icon-play"></use></svg></button>
             <img src="{{root}}/assets/img/content/0112_I.jpg" alt="">
         </div>
     </section>
 
     <section class="mpt wide">
-        <div class="mpt__content">
-            <h2>Ismerd meg Luca történetét</h2>
+        <div class="mpt__content indented">
+            <h2 class="b2">Tündi és testvére története</h2>
             <p>Gyermeke, unokája, anyja, apja, párja - volt börtönben, vagy ők maguk járták meg a börtönt. A történetek az életükről szólnak, amiben egy ideig jelen volt a börtön valósága, ami elszakította őket szeretteiktől.</p>
-            <p>A  saját, személyes megéléseiket osztják meg velünk. Azt, hogy mi volt a legnehezebb az egymástól távol töltött időben, hogyan tudtak kommunikálni és hogyan érintette ez az időszak a kapcsolataikat. Mennyiben lehetetlenítette el a minőségi kapcsolattartást, hogy a világjárvány miatt több, mint egy éven át nem láthatták személyesen a szeretteiket.</p>
             <p>
-                <button data-youtubemodal="pxs6wcX889o" class="button">Megnézem a videót!<svg class="icon"><use xlink:href="#icon-play"></use></svg></button>&nbsp;
+                <!-- <button data-youtubemodal="pxs6wcX889o" class="button">Megnézem a videót!<svg class="icon"><use xlink:href="#icon-play"></use></svg></button>&nbsp; -->
                 <a href="{{root}}/story2.html" class="button accent">Teljes sztori itt<svg class="icon"><use xlink:href="#icon-openlink"></use></svg></a>
             </p>
         </div>
         <div class="mpt__bg">
-            <!-- <button class="mpt__bg__play" data-youtubemodal="pxs6wcX889o"><svg class="icon"><use xlink:href="#icon-play"></use></svg></button> -->
+            <button class="mpt__bg__play" data-youtubemodal="pxs6wcX889o"><svg class="icon"><use xlink:href="#icon-play"></use></svg></button>
             <img src="{{root}}/assets/img/content/0111_I.jpg" alt="">
         </div>
     </section>
 
     <section class="mpt reverse wide ">
-        <div class="mpt__content">
-            <h2>Új szereplő akinek máshogy vannak a gombjai</h2>
-            <p>Gyermeke, unokája, anyja, apja, párja - volt börtönben, vagy ők maguk járták meg a börtönt. A történetek az életükről szólnak, amiben egy ideig jelen volt a börtön valósága, ami elszakította őket szeretteiktől.</p>
-            <p>A  saját, személyes megéléseiket osztják meg velünk. Azt, hogy mi volt a legnehezebb az egymástól távol töltött időben, hogyan tudtak kommunikálni és hogyan érintette ez az időszak a kapcsolataikat. Mennyiben lehetetlenítette el a minőségi kapcsolattartást, hogy a világjárvány miatt több, mint egy éven át nem láthatták személyesen a szeretteiket. 
-            </p>
+        <div class="mpt__content indented">
+            <h2 class="b3">Luca története</h2>
+            <p>Cum veritatis debitis obcaecati sed voluptatum, iure consequuntur, odit itaque consectetur quas ad nisi accusamus asperiores repellat eos! Commodi, id dolorum? Assumenda, illo odio.</p>
+            <p>
             <a href="{{root}}/story.html" class="button">Teljes sztori itt<svg class="icon"><use xlink:href="#icon-openlink"></use></svg></a>&nbsp;
-            <button class="button accent">Megosztom másokkal<svg class="icon"><use xlink:href="#icon-share"></use></svg></button>
+            <!-- <button class="button accent">Megosztom másokkal<svg class="icon"><use xlink:href="#icon-share"></use></svg></button> -->
+            </p>
         </div>
         <div class="mpt__bg">
             <button class="mpt__bg__play" data-youtubemodal="eaXAEowxOQg"><svg class="icon"><use xlink:href="#icon-play"></use></svg></button>
             <img src="{{root}}/assets/img/content/0111_II.jpg" alt="">
+        </div>
+    </section>
+
+    <section class="mpt wide">
+        <div class="mpt__content indented">
+            <h2 class="b4">Etelka története</h2>
+            <p>„Nagyon nehéz volt ez a jó pár év, de a lelkem mindig azt kívánta, hogy muszáj hozzá bemenni, kell, hogy legyen támasza.”</p>
+            <p>
+                <!-- <button data-youtubemodal="AQ2MQzyoE98" class="button">Megnézem a videót!<svg class="icon"><use xlink:href="#icon-play"></use></svg></button>&nbsp; -->
+                <a href="{{root}}/etelka.html" class="button accent">Teljes sztori itt<svg class="icon"><use xlink:href="#icon-openlink"></use></svg></a>
+            </p>
+        </div>
+        <div class="mpt__bg">
+            <button class="mpt__bg__play" data-youtubemodal="AQ2MQzyoE98"><svg class="icon"><use xlink:href="#icon-play"></use></svg></button>
+            <img src="{{root}}/assets/img/content/etelka.jpg" alt="">
         </div>
     </section>
 </div>
@@ -72,7 +85,10 @@
 
 
 <div class="pagewrap megabg">
-    <h4>Élet a rácsok mögött</h4>
+    <div class="narrowwrap left">
+    <h3 class="sectitle">Élet a rácsok mögött</h3>
+    <h4>Halgassa meg beszélgetésünket volt fogvatartottakkal</h4>
+    </div>
     <br>
     <div class="narrowwrap">
         <div class="grid-x grid-margin-x grid-margin-y">
@@ -86,30 +102,33 @@
                     <cite>Péter, 3 év 6 hónap után szabadult</cite>
                 </blockquote>
             </div>
-            <div class="cell large-6 aaccentcopy">
+            <div class="cell large-6 accentcopy">
                 <p>A „Távol a család” projekt keretében két volt fogvatartottal beszélgetett Ónody-Molnár Dóra 
                     a börtönben töltött mindennapokról, túlélési stratégiákról, a kapcsolattartás fontosságáról, 
                     a koronavírus-járvány börtönéletre gyakorolt negatív hatásairól, a reintegrációs törekvések hiányosságairól, valamint arról, milyen érzés 
                     volt évek múltán újra szabaddá válni, 
                     szabadon élni.
                     </p>
-                    <p><a href="https://soundcloud.com/helsinkibizottsag/elet-a-racsok-mogott-hosszu" target="_blank" class="button tiny faux">Meghalgatom a vágatlan verziót<svg class="icon"><use xlink:href="#icon-openlink"></use></svg></a></p>
             </div>
           </div>
             <hr class="fulldivider">
-            <div astyle="background-color: #374045; padding:0.75rem 0.5rem .333rem">
+            <!-- <div astyle="background-color: #374045; padding:0.75rem 0.5rem .333rem">
                 <iframe width="100%" height="20" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1204678576&color=%23ff5722&inverse=true&auto_play=false&show_user=false"></iframe>
-            </div>
-            <!-- <div style="background-color: #F1E9D9; padding:0.75rem 0.5rem .333rem">
-                <iframe width="100%" height="20" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1204678576&color=%23ff5722&inverse=false&auto_play=false&show_user=false"></iframe>
             </div> -->
+            <div style="background-color: #F1E9D9; padding:0.75rem 0.5rem .333rem">
+                <iframe width="100%" height="20" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1204678576&color=%23ff5722&inverse=false&auto_play=false&show_user=false"></iframe>
+            </div>
+            <br>
+            <p style="text-align: center;"><a href="https://soundcloud.com/helsinkibizottsag/elet-a-racsok-mogott-hosszu" target="_blank" class="button accent expanded">Meghalgatom a vágatlan interjút<svg class="icon"><use xlink:href="#icon-openlink"></use></svg></a></p>
+
     </div>
 </div>
 <div class="pagewrap">
-    <div class="accentcopy narrowwrap">
-        <h2 class="sectitle">Levélrészletek és beszámolók</h2>
+    <div class="accentcopy xnarrowwrap left">
+        <h2 class="sectitle">Levelek hozzátartozóktól</h2>
         <p>Az érintettek és családtagok szemszögéből, orem ipsum dolor, sit amet dolor sit amet consectetur adipisicing elit. In est tempore sequi. Lorem ipsum dolor sit amet.</p>
     </div>
+    <div class="anarrowwrap">
     <section class="cardswiper">
         <div>
             <article class="card card--short">
@@ -151,9 +170,11 @@
             </article>
         </div>
     </section>
+    </div>
 </div>
 {{>lettermodals}}
-
+<hr class="piheno">
+<br><br>
 <section id="aboutus" class="mpt awide" data-magellan-target="aboutus">
     <div class="mpt__content ">
         <h2>FECSKE - Fogvatartottakat és Családjukat Képviselő Csoport.</h2>
