--- a/src/pages/etelka.html
+++ b/src/pages/etelka.html
@@ -1,69 +1,34 @@
 <section class="mpt wide" data-magellan>
-    <div class="mpt__content">
+    <div class="mpt__content indented">
         <br><br>
         <h1>Etelka története</h1>
-        <p>Etelka egyedül élő nyugdíjas, özvegy. Amikor kiderült számára, hogy egy közeli családtagjára, L-re szabadságvesztés vár, összetört. Nem tudta, meddig tart majd ez a „pokol”, egy dologban azonban a kezdetektől fogva biztos volt: mindenben és bármi áron támogatni fogja szerettét.</p>
-    <p>
-            <a href="#videosection" class="button">Megnézem a videót!<svg class="icon"><use xlink:href="#icon-play"></use></svg></a>&nbsp;
-            <a href="#" class="button accent">Megosztom a másokkal<svg class="icon"><use xlink:href="#icon-share"></use></svg></a>
+        <p>„Nagyon nehéz volt ez a jó pár év, de a lelkem mindig azt kívánta, hogy muszáj hozzá bemenni, kell, hogy legyen támasza.”</p>
+        <p>
+            <a href="#videosection" class="button">Megnézem a videót!<svg class="icon"><use xlink:href="#icon-play"></use></svg></a>
         </p>
     </div>
     <div class="mpt__bg">
-        <img src="{{root}}/assets/img/content/0112_I.jpg" alt="">
+        <img src="{{root}}/assets/img/content/etelka.jpg" alt="">
     </div>
 </section>
-<div class="pagewrap nobottom">
-    <div class="anarrowwrap">
-        <div class="twocolcopy">
-            <p>Több mint négy éven keresztül járt látogatni, nem volt egyetlen alkalom sem, amit kihagyott volna. Azzal igyekezett tartani a lelket L-ben, hogy újra és újra elmondta neki, hazavárja a szabadulása után.</p>
-            <p>Eközben sokszor érezte úgy, hogy túlságosan szigorúak és kegyetlenek a szabályok. Szinte elviselhetetlen volt számára, hogy semmilyen érintést nem engedtek meg közöttük, a plexifal bevezetése után pedig alig hallották egymást. Etelka nem hagyta ennyiben, orvosi igazolást szerzett arról, hogy rosszul hall, ezért végül engedélyezték számukra az elválasztó nélküli beszélőt. „Ha kitessékelnek az ajtón, bemászok az ablakon” – meséli magáról.</p>
-            <p>Szeretné, ha történetével vigaszt nyújthatna más hozzátartozóknak, mert tudja, ebben az élethelyzetben csak kevesekre számíthat az ember.            </p>
-            <blockquote>
-                „Nagyon nehéz volt ez a jó pár év, de a lelkem mindig azt kívánta, hogy muszáj hozzá bemenni, kell, hogy legyen támasza.”  
-                <cite>Etelka, FECSKE interjú</cite>
-            </blockquote>
-            <p>L. négy és fél év után szabadult, Etelka pedig ígéretéhez híven befogadta és segítette őt az első lépések megtételében. L. sikeresen befejezte tanulmányait, ma már dolgozik, megházasodott, önálló életet él.</p>
-        </div>
-
+<div class="pagewrap">
+    <div class="twocolcopy">
+        <p>Etelka egyedül élő nyugdíjas, özvegy. Amikor kiderült számára, hogy egy közeli családtagjára, L-re szabadságvesztés vár, összetört. Nem tudta, meddig tart majd ez a „pokol”, egy dologban azonban a kezdetektől fogva biztos volt: mindenben és bármi áron támogatni fogja szerettét. Több mint négy éven keresztül járt látogatni, nem volt egyetlen alkalom sem, amit kihagyott volna. Azzal igyekezett tartani a lelket L-ben, hogy újra és újra elmondta neki, hazavárja a szabadulása után.</p>
+        <p>Eközben sokszor érezte úgy, hogy túlságosan szigorúak és kegyetlenek a szabályok. Szinte elviselhetetlen volt számára, hogy semmilyen érintést nem engedtek meg közöttük, a plexifal bevezetése után pedig alig hallották egymást. Etelka nem hagyta ennyiben, orvosi igazolást szerzett arról, hogy rosszul hall, ezért végül engedélyezték számukra az elválasztó nélküli beszélőt. „Ha kitessékelnek az ajtón, bemászok az ablakon” – meséli magáról. Szeretné, ha történetével vigaszt nyújthatna más hozzátartozóknak, mert tudja, ebben az élethelyzetben csak kevesekre számíthat az ember.</p>
+        <p>L. négy és fél év után szabadult, Etelka pedig ígéretéhez híven befogadta és segítette őt az első lépések megtételében. L. sikeresen befejezte tanulmányait, ma már dolgozik, megházasodott, önálló életet él.</p>
     </div>
-
 </div>
+
+<hr class="piheno">
 
 <div id="videosection" class="pagewrap acoverbg" data-magellan-target="videosection">
     <div class="narrowwrap">
-    <div class="responsive-embed widescreen">
-        <iframe src="https://www.youtube.com/embed/AQ2MQzyoE98" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <div class="responsive-embed widescreen">
+            <iframe src="https://www.youtube.com/embed/AQ2MQzyoE98" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
     </div>
-    </div>
+</div>
 
-</div>
-<hr class="fulldivider">
-<div class="pagewrap">
-    <div class="narrowwrap">
-        <h4 class="asectitle atext-center">Ismerd meg a többiek történetét is!</h4>
-        <br>
-        <ul class="tcardgrid">
-            <li>
-                <div class="tcard">
-                    <h3 class="tcard__title"><a href="{{roots}}/story.html">Andrea története</a></h3>
-                </div>
-            </li>
-            <li>
-                <div class="tcard secondary">
-                    <h3 class="tcard__title"><a href="{{roots}}/story2.html">Andor története</a></h3>
-                </div>
-            </li>
-            <li>
-                <div class="tcard accent">
-                    <h3 class="tcard__title"><a href="{{roots}}/story.html">Amanda és András története</a></h3>
-                </div>
-            </li>
-            <li>
-                <div class="tcard opaque">
-                    <h3 class="tcard__title"><a href="{{roots}}/story2.html">Andor története</a></h3>
-                </div>
-            </li>
-        </ul>
-    </div>
-</div>
-<br><br>
+<hr class="piheno">
+
+{{>torteneteknav}}
