--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,14 +1,14 @@
 <div class="hero">
     <img class="hero__bg" src="{{root}}assets/img/content/hazasparkutyaval.jpg" alt="Otthon várunk!">
     <div class="hero__content">
-        <h2 class="hero__title">Otthon<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;várunk!</h2>
+        <h2 class="hero__title">Otthon<br>&nbsp;&nbsp;&nbsp;&nbsp;várunk!</h2>
     </div>
 </div>
 
 <div id="project" data-magellan-target="project" class="pagewrap">
     <div class="xnarrowwrap left">
-    <h1 class="sectitle">Távol a család projekt</h1>
-    <h4>Hozzátartozók személyes történetei</h4>
+        <h1 class="sectitle">Távol a család projekt</h1>
+        <h4>Hozzátartozók személyes történetei</h4>
     </div>
     <br>
     <div class="narrowwrap accentcopy">
@@ -18,50 +18,46 @@
     </div>
 </div>
 <hr class="piheno">
-<br><br><br>
 <div class="mptlist" id="stories" data-magellan-target="stories">
     <section class="mpt wide reverse">
         <div class="mpt__content indented">
-            <h2 class="b1">Anna és férje története</h2>
+            <h2 class="b1">Andrea története</h2>
             <p>„Lorem ipsum dolor sit amet. Nagyon nehéz volt ez a jó pár év, de a lelkem mindig azt kívánta, hogy muszáj hozzá bemenni, kell, hogy legyen támasza.”</p>
             <p>
-                <!-- <button data-youtubemodal="AQ2MQzyoE98" class="button">Megnézem a videót!<svg class="icon"><use xlink:href="#icon-play"></use></svg></button>&nbsp; -->
-                <a href="{{root}}/etelka.html" class="button accent">Teljes sztori itt<svg class="icon"><use xlink:href="#icon-openlink"></use></svg></a>
+                <a href="{{root}}/andrea.html" class="button accent">Teljes sztori itt<svg class="icon"><use xlink:href="#icon-openlink"></use></svg></a>
             </p>
         </div>
         <div class="mpt__bg">
             <button class="mpt__bg__play" data-youtubemodal="eaXAEowxOQg"><svg class="icon"><use xlink:href="#icon-play"></use></svg></button>
-            <img src="{{root}}/assets/img/content/0112_I.jpg" alt="">
+            <img src="{{root}}/assets/img/content/andrea.jpg" alt="">
         </div>
     </section>
 
     <section class="mpt wide">
         <div class="mpt__content indented">
-            <h2 class="b2">Tündi és testvére története</h2>
-            <p>Gyermeke, unokája, anyja, apja, párja - volt börtönben, vagy ők maguk járták meg a börtönt. A történetek az életükről szólnak, amiben egy ideig jelen volt a börtön valósága, ami elszakította őket szeretteiktől.</p>
+            <h2 class="b2">Tünde története</h2>
+            <p>„A kapcsolatunk eleinte még jó volt, könnyebben vissza tudott illeszkedni a családba is. De amikor már hosszabb éveket bent töltött, akkor nehezebb volt neki és nekünk is. Már nem ismerjük, nem ismerem őt.”</p>
             <p>
-                <!-- <button data-youtubemodal="pxs6wcX889o" class="button">Megnézem a videót!<svg class="icon"><use xlink:href="#icon-play"></use></svg></button>&nbsp; -->
-                <a href="{{root}}/story2.html" class="button accent">Teljes sztori itt<svg class="icon"><use xlink:href="#icon-openlink"></use></svg></a>
+                <a href="{{root}}/tunde.html" class="button accent">Teljes sztori itt<svg class="icon"><use xlink:href="#icon-openlink"></use></svg></a>
             </p>
         </div>
         <div class="mpt__bg">
-            <button class="mpt__bg__play" data-youtubemodal="pxs6wcX889o"><svg class="icon"><use xlink:href="#icon-play"></use></svg></button>
-            <img src="{{root}}/assets/img/content/0111_I.jpg" alt="">
+            <button class="mpt__bg__play" data-youtubemodal="AQ2MQzyoE98"><svg class="icon"><use xlink:href="#icon-play"></use></svg></button>
+            <img src="{{root}}/assets/img/content/tunde.jpg" alt="">
         </div>
     </section>
 
     <section class="mpt reverse wide ">
         <div class="mpt__content indented">
             <h2 class="b3">Luca története</h2>
-            <p>Cum veritatis debitis obcaecati sed voluptatum, iure consequuntur, odit itaque consectetur quas ad nisi accusamus asperiores repellat eos! Commodi, id dolorum? Assumenda, illo odio.</p>
+            <p>„Ott van a fejemben folyamatosan, hogy mi van vele, hiszen nagyon szeretem, és aggódom, aggódunk mindannyian érte. Minden napunkra, minden percünkre rányomja a bélyeget ez az érzés.”</p>
             <p>
-            <a href="{{root}}/story.html" class="button">Teljes sztori itt<svg class="icon"><use xlink:href="#icon-openlink"></use></svg></a>&nbsp;
-            <!-- <button class="button accent">Megosztom másokkal<svg class="icon"><use xlink:href="#icon-share"></use></svg></button> -->
+            <a href="{{root}}/luca.html" class="button">Teljes sztori itt<svg class="icon"><use xlink:href="#icon-openlink"></use></svg></a>
             </p>
         </div>
         <div class="mpt__bg">
             <button class="mpt__bg__play" data-youtubemodal="eaXAEowxOQg"><svg class="icon"><use xlink:href="#icon-play"></use></svg></button>
-            <img src="{{root}}/assets/img/content/0111_II.jpg" alt="">
+            <img src="{{root}}/assets/img/content/luca.jpg" alt="">
         </div>
     </section>
 
@@ -70,7 +66,6 @@
             <h2 class="b4">Etelka története</h2>
             <p>„Nagyon nehéz volt ez a jó pár év, de a lelkem mindig azt kívánta, hogy muszáj hozzá bemenni, kell, hogy legyen támasza.”</p>
             <p>
-                <!-- <button data-youtubemodal="AQ2MQzyoE98" class="button">Megnézem a videót!<svg class="icon"><use xlink:href="#icon-play"></use></svg></button>&nbsp; -->
                 <a href="{{root}}/etelka.html" class="button accent">Teljes sztori itt<svg class="icon"><use xlink:href="#icon-openlink"></use></svg></a>
             </p>
         </div>
@@ -112,9 +107,6 @@
             </div>
           </div>
             <hr class="fulldivider">
-            <!-- <div astyle="background-color: #374045; padding:0.75rem 0.5rem .333rem">
-                <iframe width="100%" height="20" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1204678576&color=%23ff5722&inverse=true&auto_play=false&show_user=false"></iframe>
-            </div> -->
             <div style="background-color: #F1E9D9; padding:0.75rem 0.5rem .333rem">
                 <iframe width="100%" height="20" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1204678576&color=%23ff5722&inverse=false&auto_play=false&show_user=false"></iframe>
             </div>
@@ -124,9 +116,9 @@
     </div>
 </div>
 <div class="pagewrap">
-    <div class="accentcopy xnarrowwrap left">
+    <div class="accentcopy narrowwrap left">
         <h2 class="sectitle">Levelek hozzátartozóktól</h2>
-        <p>Az érintettek és családtagok szemszögéből, orem ipsum dolor, sit amet dolor sit amet consectetur adipisicing elit. In est tempore sequi. Lorem ipsum dolor sit amet.</p>
+        <h4>Beszámolók a kapcsolattartás nehézségeiről</h4>
     </div>
     <div class="anarrowwrap">
     <section class="cardswiper">
@@ -139,12 +131,12 @@
                     <p>Amikor tisztában vagy vele, hogy nemsokára át kell sétálnod a poklon, az idő száguldani kezd. Biztos voltam benne, hogy nemsokára megérkezik A LEVÉL, ami elszakítja tőlünk a gyermekeim apját, a másik felemet.</p>
                 </div>
                 <div class="card__actions">
-                    <button data-open="letter-olivia-modal" class="button accent">Elolvasom!</button>
+                    <button data-open="letter-olivia-modal" class="button accent">Elolvasom</button>
                 </div>
             </article>
         </div>
         <div>
-            <article class="card card--short secondary">
+            <article class="card card--short accent">
                 <h3 class="card__title">
                     Leila és a családja története
                 </h3>
@@ -152,20 +144,20 @@
                     <p>Csak számoljuk a napokat, amikor végre együtt lehet a család. Az a család, ami soha nem is volt igazán egy. Mert valaki hiányzott belőle mindig is. Az édesapám!</p>
                 </div>
                 <div class="card__actions">
-                    <button data-open="letter-leila-modal" class="button">Elolvasom!</button>
+                    <button data-open="letter-leila-modal" class="button">Elolvasom</button>
                 </div>
             </article>
         </div>
         <div>
-            <article class="card card--short accent">
+            <article class="card card--short secondary">
                 <h3 class="card__title">
-                    Lorem ipsum levele
+                    A Te történeted
                 </h3>
                 <div class="card__excerpt">
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore corporis exercitationem dolore magnam porro nobis ab magni pariatur error at, dolorum odit? Architecto.</p>
+                    <p>Ha Neked is van olyan kapcsolattartást érintő történeted, amit szívesen megosztanál másokkal, akkor küldd el nekünk az <a href="mailto:info@fogvatartas.hu">info@fogvatartas.hu</a> email címre.</p>
                 </div>
                 <div class="card__actions">
-                    <button data-open="letter-third-modal" class="button">Elolvasom!</button>
+                    <a href="mailto:info@fogvatartas.hu" class="button">info@fogvatartas.hu</a>
                 </div>
             </article>
         </div>
@@ -174,20 +166,21 @@
 </div>
 {{>lettermodals}}
 <hr class="piheno">
-<br><br>
-<section id="aboutus" class="mpt awide" data-magellan-target="aboutus">
-    <div class="mpt__content ">
-        <h2>FECSKE - Fogvatartottakat és Családjukat Képviselő Csoport.</h2>
+<section id="aboutus" class="pagewrap" data-magellan-target="aboutus">
+    <div class="xnarrowwrap left">
+        <h1 class="sectitle">FECSKE</h1>
+        <h4>Fogvatartottakat és Családjukat Képviselő Csoport</h4>
+    </div>
+    <br>
+    <div class="narrowwrap accentcopy">
         <p>Szabadult fogvatartottakból, családtagjaikból, civilekből, a büntetés-végrehajtással foglalkozó szakemberekből álló hálózat. Ez a hálózat abban hisz, hogy mindenkinek joga van a szabadságvesztés büntetését emberséges körülmények között tölteni. Az emberséges börtönkörülmények között töltött szabadságvesztés, a szociális szolgáltatások segítik a szabadulás utáni talpra állást, a társadalomba történő sikeres visszailleszkedést. Az emberséges fogvatartás kiemelt figyelmet fordít a családdal való minőségi kapcsolattartásra.</p>
         <p>A FECSKE azért jött létre, hogy a magyar börtön égető, és rendszerszintű problémáin együtt gondolkozhassanak a büntetés-végrehajtás által érintett csoportok tagjai. Hosszútávon egy önszerveződő mozgalom alapjait kívánjuk megteremteni és a fogvatartottak érdekképviseletének új formáit kialakítani. Célunk, hogy változzon a közvéleményben a fogvatartottakról kialakított kép. Legyen olyan platform, amin a fogvatartottak és családjuk nézőpontja is megjelenik.</p>
-        <a href="https://fogvatartas.hu/" target="_blank" class="button large">A FECSKE weboldala</a>
-    </div>
-    <div class="mpt__media">
-        <figure class="mpt__fig">
-            <img src="{{root}}assets/img/content/madarak.jpg" alt="">
-        </figure>
+        <br>
+        <p><a href="https://fogvatartas.hu/" target="_blank" class="button large">A FECSKE weboldala</a></p>
     </div>
 </section>
+<hr class="piheno">
+<div class="pagewrap nobottom"></div>
 
 
 
