equlize plus her

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,7 +1,7 @@
 <div class="hero">
     <img class="hero__bg" src="{{root}}assets/img/content/hazasparkutyaval.jpg" alt="Otthon várunk!">
     <div class="hero__content">
-        <h2 class="hero__title">Otthon<br>&nbsp;&nbsp;&nbsp;&nbsp;várunk!</h2>
+        <h2 class="hero__title">Otthon<br>várunk!</h2>
     </div>
 </div>
 
@@ -42,7 +42,7 @@
             </p>
         </div>
         <div class="mpt__bg">
-            <button class="mpt__bg__play" data-youtubemodal="AQ2MQzyoE98"><svg class="icon"><use xlink:href="#icon-play"></use></svg></button>
+            <button class="mpt__bg__play" data-youtubemodal="Zkda9RRfOZk"><svg class="icon"><use xlink:href="#icon-play"></use></svg></button>
             <img src="{{root}}/assets/img/content/tunde.jpg" alt="">
         </div>
     </section>
@@ -56,7 +56,7 @@
             </p>
         </div>
         <div class="mpt__bg">
-            <button class="mpt__bg__play" data-youtubemodal="eaXAEowxOQg"><svg class="icon"><use xlink:href="#icon-play"></use></svg></button>
+            <button class="mpt__bg__play" data-youtubemodal="OS6G5Zw8XcQ"><svg class="icon"><use xlink:href="#icon-play"></use></svg></button>
             <img src="{{root}}/assets/img/content/luca.jpg" alt="">
         </div>
     </section>
@@ -70,7 +70,7 @@
             </p>
         </div>
         <div class="mpt__bg">
-            <button class="mpt__bg__play" data-youtubemodal="AQ2MQzyoE98"><svg class="icon"><use xlink:href="#icon-play"></use></svg></button>
+            <button class="mpt__bg__play" data-youtubemodal="Yjbfc_CuT_U"><svg class="icon"><use xlink:href="#icon-play"></use></svg></button>
             <img src="{{root}}/assets/img/content/etelka.jpg" alt="">
         </div>
     </section>
@@ -121,14 +121,15 @@
         <h4>Beszámolók a kapcsolattartás nehézségeiről</h4>
     </div>
     <div class="anarrowwrap">
-    <section class="cardswiper">
+    <section class="cardswiper" data-equalizer data-equalize-on="medium">
         <div>
-            <article class="card card--short">
+            <article class="card card--short" data-equalizer-watch>
                 <h3 class="card__title">
-                    Olívia beszámolója az első napokról  
+                    Olívia
                 </h3>
                 <div class="card__excerpt">
-                    <p>Amikor tisztában vagy vele, hogy nemsokára át kell sétálnod a poklon, az idő száguldani kezd. Biztos voltam benne, hogy nemsokára megérkezik A LEVÉL, ami elszakítja tőlünk a gyermekeim apját, a másik felemet.</p>
+                    <p>Olívia beszámolója arról, hogy mit érzett akkor, amikor szembesült azzal, hogy férjének, akit több év börtönbüntetésre ítéltek, hamarosan be kell vonulnia:</p>
+                    <p><em>“Amikor tisztában vagy vele, hogy át kell sétálnod a poklon, az idő száguldani kezd. Biztos voltam benne, hogy nemsokára megérkezik a LEVÉL, ami elszakítja tőlünk a gyermekeim apját, a másik felemet.”</em></p>
                 </div>
                 <div class="card__actions">
                     <button data-open="letter-olivia-modal" class="button accent">Elolvasom</button>
@@ -136,12 +137,13 @@
             </article>
         </div>
         <div>
-            <article class="card card--short accent">
+            <article class="card card--short accent" data-equalizer-watch>
                 <h3 class="card__title">
-                    Leila és a családja története
+                    Leila
                 </h3>
                 <div class="card__excerpt">
-                    <p>Csak számoljuk a napokat, amikor végre együtt lehet a család. Az a család, ami soha nem is volt igazán egy. Mert valaki hiányzott belőle mindig is. Az édesapám!</p>
+                    <p>Leila arról mesél, hogyan élik meg azt otthon, hogy az édesapja már 8 éve börtönben van:</p>
+                    <p><em>“Csak számoljuk a napokat, amikor végre együtt lehet a család. Az a család, ami soha nem is volt igazán egy. Mert valaki hiányzott belőle mindig is. Az édesapám!”</em></p>
                 </div>
                 <div class="card__actions">
                     <button data-open="letter-leila-modal" class="button">Elolvasom</button>
@@ -149,7 +151,7 @@
             </article>
         </div>
         <div>
-            <article class="card card--short secondary">
+            <article class="card card--short secondary" data-equalizer-watch>
                 <h3 class="card__title">
                     A Te történeted
                 </h3>
