--- a/src/pages/tunde.html
+++ b/src/pages/tunde.html
@@ -24,7 +24,7 @@
 <div id="videosection" class="pagewrap acoverbg" data-magellan-target="videosection">
     <div class="narrowwrap">
         <div class="responsive-embed widescreen">
-            <iframe src="https://www.youtube.com/embed/AQ2MQzyoE98" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/Zkda9RRfOZk" title="Tünde története" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
     </div>
 </div>
